modify for bootstrap 5

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <h1>new heading for github tutorial</h1>
-<h2>tow heading file!</h2>
+
+<div class="container">
+<h1>new division container for bootstrap 5 tutorial</h1>
+</div>
 </body>
 </html>
